Moved media queries and fixed header background image on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -155,24 +155,6 @@ header h1{
   font-weight: lighter;
   color: #2e2c2f
 }
-@media (max-width:700px){
-  .about-lockup{
-    display: block;
-    text-align: center;
-  }
-  .about-lockup .face{
-    display: block;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  .about-lockup div{
-    display: inline-block;
-  }
-  .about-lockup [class^="icon-"]{
-    margin: 15px;
-  }
-}
 
 /* skill lockup */
 .skill-lockup{
@@ -212,15 +194,6 @@ header h1{
   background: white;
   border-radius: 50%;
   margin: 2px;
-}
-@media (max-width:640px) {
-  .skill-lockup{
-    width: 220px;
-  }
-  .skill-lockup .skill-unit{
-    width: 220px;
-    margin: 0 auto;
-  }
 }
 
 
@@ -318,4 +291,40 @@ footer h3, footer p{
   text-align: center;
   letter-spacing: 0.1em;
   color: rgba(198, 198, 193, 0.5)
+}
+
+
+/*media queries*/
+@media (max-width:700px){
+  header{
+    background-attachment: scroll;
+  }
+  .about-lockup{
+    display: block;
+    text-align: center;
+  }
+  .about-lockup .face{
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .about-lockup div{
+    display: inline-block;
+  }
+  .about-lockup [class^="icon-"]{
+    margin: 15px;
+  }
+  
+}
+
+
+@media (max-width:640px) {
+  .skill-lockup{
+    width: 220px;
+  }
+  .skill-lockup .skill-unit{
+    width: 220px;
+    margin: 0 auto;
+  }
 }
